Fixed menu item not showing because of whatsapp web changes (new icon for statuses). Improved the icon appearence.

--- a/sources/style.css
+++ b/sources/style.css
@@ -5,15 +5,9 @@ License: GNU GPLv3
 */
 
 
-.menu-item-watoolkit
-{
-    margin-right: 16px !important;
-    cursor: pointer !important;
-}
-
 .icon-watoolkit
 {
-    background-image: url(chrome-extension://__MSG_@@extension_id__/img/iconMenuItem128.png) !important;
+    background-image: url(chrome-extension://__MSG_@@extension_id__/img/iconMenuItem24.png) !important;
     background-position: 3px 3px !important;
     background-size: 18px 18px !important;
     cursor: pointer !important;
